@@ -85,6 +85,11 @@ Bug fixes since 2.2
   A backwards compatible change to the input handling has been made
   forOffsetHoursMinutes(0, -15) now creates -00:15
 
+- DateTimeFormatter.parseInto [#21]
+  Fix parseInto() where it obtains the default year for parsing from the ReadWritableInstant
+  Previously, the wrong year could be obtained at the start or end of the year in non UTC zones
+  Now obtains the year from the ReadWritableInstant using the chronology of the ReadWritableInstant
+
 
 Scala
 --------
